fix overflow layout

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   @apply font-sans;
 }
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
 
   font-synthesis: none;
